Login cust. with social providers
Signed-off-by: Kiran Parajuli <kiran.parajuli@asians.cloud>

--- a/themes/my-custom-theme/login/theme.properties
+++ b/themes/my-custom-theme/login/theme.properties
@@ -12,6 +12,10 @@ kcFormCardClass=kc-form-card
 kcFormHeaderClass=kc-form-header
 kcFormGroupClass=kc-form-group
 
+kcFormPasswordVisibilityButtonClass=kc-form-password-visibility-button
+kcFormPasswordVisibilityIconShow=fa fa-eye
+kcFormPasswordVisibilityIconHide=fa fa-eye-slash
+
 kcAlertClass=
 kcFeedbackSuccessIcon=
 kcFeedbackWarningIcon=
