Add theme according to new-console web design
Signed-off-by: Kiran Parajuli <kiran.parajuli@asians.cloud>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       KC_HOSTNAME: localhost
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
+      JAVA_OPTS_APPEND: "-Dfile.encoding=UTF-8"
     ports:
       - "8080:8080"
     volumes:
